--- a/main.tex
+++ b/main.tex
@@ -57,10 +57,22 @@
 	\pagenumbering{arabic}
 	
 	\section{Introduction}
-		\paragraph\indent
-			In this document we will be providing our findings on testing the individual web interfaces of teams alpha and Bravo.
+		\paragraph\newline
+			In this document we will be providing our findings on testing the individual web interfaces of teams Alpha and Bravo in regards to the COS 301 mini-project.
 
+	\section{The functionality that is correctly implemented - Alpha}
+		\paragraph\newline			
+			Due to the back-end of the project never being fully completed and integrated, it is difficult to accurately establish what was and what wasn't correctly implemented as nothing can be thoroughly tested, however, after following the readme that was placed in the repository, the website was indeed running and could be navigated.
+			\newline
+			\newline
+			With regards to publications, there is a link to publications itself, which comes across as an add publications page. There is a sub-field in which you can change the current life-cycle state of the publication but upon testing it was established that there was only one field to choose from but the functionality was there none-the-less.The ability to change the publication title and envisaged completion date work very well and meet requirements.
+			\newline
+			\newline
+			When navigating to the research page, the functionality to add, suspend or reactivate a research group exists and it is well set out and easy to navigate. Obviously due to the lack of a back-end there is no way to test if the object is actually being sent.
+			The researcher category addition and modification pages are also implemented and are according to spec.
+			\newline
+			\newline
+			The overall aesthetic look of the website is good and navigation is simple and easy, nothing seemingly difficult or painful to use.
 			
-		
 		
 \end{document}
