--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,9 @@
 		\paragraph\newline
 			In this document we will be providing our findings on testing the individual web interfaces of teams Alpha and Bravo in regards to the COS 301 mini-project.
 
-	\section{The functionality that is correctly implemented - Alpha}
+	\section{Functional Testing - Alpha}
+
+	\subsection{The functionality that is correctly implemented - Alpha}
 		\paragraph\newline			
 			Due to the back-end of the project never being fully completed and integrated, it is difficult to accurately establish what was and what wasn't correctly implemented as nothing can be thoroughly tested, however, after following the readme that was placed in the repository, the website was indeed running and could be navigated.
 			\newline
@@ -74,5 +76,21 @@
 			\newline
 			The overall aesthetic look of the website is good and navigation is simple and easy, nothing seemingly difficult or painful to use.
 			
+			\subsection{Short-comings of the implemented functionality}
+			
+			\subsection{Missing Functionality}
+			
+	\section{Functional Testing - Bravo}
+		
+			\subsection{The functionality that is correctly implemented}
+		
+			\subsection{Short-comings of the implemented functionality}
+
+
+			\subsection{Missing Functionality}
+			\paragraph
+			  With the back-end of the system not completed, plugged in properly to this section, We have found that most functionality is hindered somehow, thus not realising if it successfully provide the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
+		
+		
 		
 \end{document}
