Added my section for alpha 2b

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 	Watt, Brenton\\
 	\texttt{14032644}
 	\and
-	Loosen, Micheal\\
+	Loosen, Michael\\
 	\texttt{14017254}
 	\and
 	Masibi, Mothusi\\
@@ -87,5 +87,19 @@
 			\subsection{Reports}
 				\paragraph \newline
 					This section allows the user to type in the details of the publication that a report must be generated for. The user must enter the publication type and the name of a person or research group that the publication is assigned to. After clicking the "Generate Report" button, the user is taken to a page which displays all of the research groups and the publications that they are part of.
+					
+			\section{Software Architecture Specifications Partially Complied To - Alpha}
+			\subsection{General Layout}
+				\paragraph \newline
+				The technologies that were specified in the Architectural Requirements were as follows:
+				\begin{itemize}
+					\item Bower
+					\item Ember CLI
+					\item Node.js with npm
+					\item Broccolli
+					\item QUnit
+					\item PhantomJS
+				\end{itemize}
+				All of which were involved in the implementation of the Alpha web interface. Thus, nothing can be said in regard to any of the Architecture Specifications only being partially complied to.
 		
 \end{document}
