--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,20 @@
 			\subsection{Reports}
 				\paragraph \newline
 					This section allows the user to type in the details of the publication that a report must be generated for. The user must enter the publication type and the name of a person or research group that the publication is assigned to. After clicking the "Generate Report" button, the user is taken to a page which displays all of the research groups and the publications that they are part of.
+\section{Which aspects of the software architecture specification were adhered to - Alpha}
+The architecture specifications that were followed are as follows:
+\begin{itemize}
+	\item Add publication
+	\item Change Publication state
+	\item Organize publications according to researcher-category
+	\item Organize publications according to research-group
+	\item Templating
+	\item Pre-compilation of templates
+	\item Automatic Model population
+	\item Virtual DOM
+	\item Javascript is used
+	\item integrates well with npm
+\end{itemize}
 					
 			\section{Software Architecture Specifications Partially Complied To - Alpha}
 				\paragraph \newline
