--- a/main.tex
+++ b/main.tex
@@ -114,5 +114,13 @@ The architecture specifications that were followed are as follows:
 					\item PhantomJS
 				\end{itemize}
 				All of which were involved in the implementation of the Alpha web interface. Thus, nothing can be said in regard to any of the Architecture Specifications only being partially complied to.
-		
+
+\section{Which aspects of the software architecture specification were not implemented - Alpha}	
+\begin{itemize}
+	\item Get publication
+	\item Automatic rebuild on file changes
+	\item Caching
+	\item Integration with the rest of the system
+	\item No controllers for MVC, but models and views were implemented
+\end{itemize}
 \end{document}
