Added some clarification on the points in 2.3 Alpha

--- a/main.tex
+++ b/main.tex
@@ -123,4 +123,5 @@ The architecture specifications that were followed are as follows:
 	\item Integration with the rest of the system
 	\item No controllers for MVC, but models and views were implemented
 \end{itemize}
+The features that are listed above were not identifiable on the work done. The MVC feature was only missing the controllers in order to fully follow the MVC pattern. The web was also not integrated to the rest of the system.
 \end{document}
