Added clarification for 2.1 Alpha

--- a/main.tex
+++ b/main.tex
@@ -101,6 +101,7 @@ The architecture specifications that were followed are as follows:
 	\item Javascript is used
 	\item integrates well with npm
 \end{itemize}
+The sections listed above are the sections that were testable and thus could be classified as parts of the specification that were followed.
 					
 			\section{Software Architecture Specifications Partially Complied To - Alpha}
 				\paragraph \newline
