Update main.tex added Missing Functionality - Bravo
Missing functionality - Bravo

--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,14 @@
 			\newline
 			\newline
 			The overall aesthetic look of the website is good and navigation is simple and easy, nothing seemingly difficult or painful to use.
+	
+	
+				\section{Missing Functionality - Bravo}
+					\newline
+					With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
+					\newline
+					
+		
 			
 	\section{The functionality that is correctly implemented - Bravo}
 		\subsection{General Layout}
@@ -125,4 +133,9 @@ The sections listed above are the sections that were testable and thus could be 
 	\item No controllers for MVC, but models and views were implemented
 \end{itemize}
 The features that are listed above were not identifiable on the work done. The MVC feature was only missing the controllers in order to fully follow the MVC pattern. The web was also not integrated to the rest of the system.
+
+
+
+
+
 \end{document}
