Added Missing section headers for Architecture Compliance Analysis.

--- a/main.tex
+++ b/main.tex
@@ -72,17 +72,15 @@
 			The overall aesthetic look of the website is good and navigation is simple and easy, nothing seemingly difficult or painful to use.
 	
 	
-				\section{Missing Functionality - Bravo}
-					\newline
-					With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
-					\newline
-					
-		
-			
-	\section{The functionality that is correctly implemented - Bravo}
-		\subsection{General Layout}
-			\paragraph \newline
-				The website is aesthetically pleasing and very simple to use. All available links in the navigation bar work correctly and take the user to the relevant webpages. The "Home" link takes the user to the homepage which is just a welcome page. Under the "Publications" section are two links to either add a new publication or list all current publications and both of these links work correctly. Next is a "People" section which has 3 links to either list all users, add a new user or add a new research group respectively and all these links work. The last section of the website is the "Reports" section which contains the link "Query" which generates a report for the user and this also works correctly.
+\section{Missing Functionality - Bravo}
+\newline
+With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
+\newline
+
+\section{The functionality that is correctly implemented - Bravo}
+\subsection{General Layout}
+\paragraph \newline
+The website is aesthetically pleasing and very simple to use. All available links in the navigation bar work correctly and take the user to the relevant webpages. The "Home" link takes the user to the homepage which is just a welcome page. Under the "Publications" section are two links to either add a new publication or list all current publications and both of these links work correctly. Next is a "People" section which has 3 links to either list all users, add a new user or add a new research group respectively and all these links work. The last section of the website is the "Reports" section which contains the link "Query" which generates a report for the user and this also works correctly.
 
 		\subsection{Publications}
 			\paragraph \newline
@@ -139,22 +137,27 @@ The features that are listed above were not identifiable on the work done. The M
 
 \subsection{Analysis of Bravo Team}
 
-\subsubsection{Aspects of Specification which were adheared to - Bravo}
+\subsubsection{Aspects of Specification which were adhered to - Bravo}
 	The architecture specifications that were adhered to are as follows:
 	\begin{itemize}
 		\item Add publication
 		\item Change Publication state
 		\item Organize publications according to researcher-category
 		\item Organize publications according to research-group
-		\item Templating
+		\item Templates
 		\item Pre-compilation of templates
 		\item Automatic Model population
 		\item Virtual DOM
-		\item Javascript is used
+		\item JavaScript is used
 		\item integrates well with npm
 	\end{itemize}
 	
 The sections listed above are the sections that were testable and thus could be classified as parts of the specification that were followed.
 
+\subsubsection{Partial Compliance to Specifications & Shortcomings - Bravo}
+\paragraph{This section serves to outline which sections of the Architecture Specification the System partially complies with. This section also serves to outline any shortcomings with the current implementation of the system.}
+
+\subsubsection{Aspects of the Specification which were not Implemented}
+\paragraph{This section outlines parts of the specification which were not implemented by Bravo Team's Web Interface.}
 
 \end{document}
