Changed Aspects Which were adhered to.

--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,6 @@
 	
 	
 \section{Missing Functionality - Bravo}
-\newline
 With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
 \newline
 
@@ -140,21 +139,17 @@ The features that are listed above were not identifiable on the work done. The M
 \subsubsection{Aspects of Specification which were adhered to - Bravo}
 	The architecture specifications that were adhered to are as follows:
 	\begin{itemize}
-		\item Add publication
-		\item Change Publication state
-		\item Organize publications according to researcher-category
-		\item Organize publications according to research-group
-		\item Templates
-		\item Pre-compilation of templates
-		\item Automatic Model population
-		\item Virtual DOM
-		\item JavaScript is used
-		\item integrates well with npm
+		\item Built on \textit{Ember.js}
+		\item Integrated with \textit{Node Package Manager} (NPM)
+		\item Change Publication state (Functional)
+		\item Organize publications according to researcher-category (Functional)
+		\item Organize publications according to research-group (Functional)
+		\item JavaScript Implementation
 	\end{itemize}
 	
 The sections listed above are the sections that were testable and thus could be classified as parts of the specification that were followed.
 
-\subsubsection{Partial Compliance to Specifications & Shortcomings - Bravo}
+\subsubsection{Partial Compliance to Specifications \& Shortcomings - Bravo}
 \paragraph{This section serves to outline which sections of the Architecture Specification the System partially complies with. This section also serves to outline any shortcomings with the current implementation of the system.}
 
 \subsubsection{Aspects of the Specification which were not Implemented}
