--- a/main.tex
+++ b/main.tex
@@ -137,5 +137,14 @@ This problem propagates through the entire system because of the disconnect betw
 				\section{Missing Functionality - Bravo}
 					With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
 					\newline
-					
+				
+\section{Aspects of the software architecture specification not implemented - Bravo}
+Firstly right off the bat, deployability was a very prominent problem. To simply get the software working was a nightmare given that there was no indication of what software frameworks where required. This makes the job of future developers hard given that they need to analyze package files to understand what exactly is needed. Also with no direction from a readme the project is a hassle to get off the ground.
+
+Testability was the next issue. However, this is reasonable given that without proper communication with the backend, there is not much one could have tested that would be worthwhile.
+
+Given the issues above maintainability of the project fall through the floor, if issues are not fixed present a full rewrite of the project would be in order. However, if proper organization can take place then a lot of time will be saved depending on the quality of the code after reorganizing the project.
+
+
+	
 \end{document}
