Software Architecture Specifications Partially Complied To - Bravo

--- a/main.tex
+++ b/main.tex
@@ -123,6 +123,21 @@ The sections listed above are the sections that were testable and thus could be 
 					\item PhantomJS
 				\end{itemize}
 				All of which were involved in the implementation of the Alpha web interface. Thus, nothing can be said in regard to any of the Architecture Specifications only being partially complied to.
+				
+\section{Software Architecture Specifications Partially Complied To - Bravo}
+	\paragraph
+	\newline
+	The following technologies specified in the Architectural Requirements were implemented:
+	\begin{itemize}
+		\item Ember CLI
+		\item PhantomJS
+		\item Node.js (using NPM)
+		\item Broccoli
+		\item Bower
+		\item QUnit for testing
+	\end{itemize}
+	
+	Therefore, the Bravo Web team adhered to the architecture specification, and there aren't any partially complied specification.
 
 \subsubsection{Which aspects of the software architecture specification were not implemented - Alpha}	
 \begin{itemize}
