Added 1.c) missing functionality for Alpha

--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,10 @@
 With the back-end of the system not completed, plugged in properly to this interface, We have found that most functionality is hindered somehow, thus not realising if it successfully renders the service or not. Regarding testing for functionality that is not there, there is little to point out, as an Add Publication tab,   	
 \newline
 
+\section {Missing Functionality - Alpha}
+The website runs well and is navigable, though most of the functionality is visible and  you are able to go through different pages and buttons and interact with some of the functionality, most of it has not been fully implemented, due to there being no integration with the back-end functionality.  So to that end most of the functionality cannot be tested, and therefore it is not accurate to say whether certain functionality works or not.  
+\newline
+
 \section{The functionality that is correctly implemented - Bravo}
 \subsection{General Layout}
 \paragraph \newline
